fix: ensure embedded PostgreSQL is cleaned up on crash or forced termination (Fix #12844)
* Modified PostgreProcessCleaner logic to fix windows os issue.